# themore_amazon

./: .gitignore  .pre-commit-config.yaml  Dockerfile  captcha_solve.py  config.yml  main.py  pyproject.toml  readme.md  ruff.toml  utils.py
themore_amazon/: __main__.py  captcha_solve.py  main.py  utils.py
