[tool.poetry]
name = "themore-amazon"
version = "0.2.1"
description = ""
readme = "readme.md"
authors = ["cda2 <qq23667@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.41.2"
pyyaml = "^6.0.1"
amazoncaptcha = "^0.5.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pre-commit = "^3.6.2"

[tool.ruff]
line-length = 80
fix = true
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "W", # pycodestyle warnings
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "PT", # flake8-pytest-style
    "ASYNC", # flake8-async
    "PTH", # flake8-use-pathlib
    "N", # pep8-naming
    "PL", # pylint
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations
    "RUF", # ruff specific rules
]
ignore = [
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "B008", # Do not perform function call {name} in argument defaults
    "B905", # zip() without an explicit strict= parameter
    "C901", # {name} is too complex ({complexity} > {max_complexity})
    "E501", # Line too long
    "F405", # name may be undefined, or defined from star imports: module
    "F841", # Local variable {name} is assigned to but never used
    "F842", # Local variable {name} is annotated but never used
]
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
