[tool.poetry]
name = "themore-amazon"
version = "0.2.1"
description = ""
readme = "readme.md"
authors = ["cda2 <qq23667@gmail.com>"]
include = ["themore_amazon"]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.41.2"
pyyaml = "^6.0.1"
amazoncaptcha = "^0.5.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
