[project]
name = "themore-amazon"
version = "0.3.0"
description = "You know what it is."
authors = [
    { name = "cda2", email = "qq23667@gmail.com" }
]
dependencies = [
    "playwright>=1.44.0",
    "pyyaml>=6.0.1",
    "amazoncaptcha>=0.5.11",
]
readme = "readme.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.8",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["themore_amazon"]
